# VIO-DIRD

./: README.md  readme.txt
VIO-DIRD/: GroundtruthLoop_trajReal.m  TrueLoop.mat  loopClose_groundTruth.m  traj_estimate_true_mh05.mat  truth_traj.mat
VIO-DIRD/DIRD_MH05/: FindLoops.m  Results.mat  Results1.mat  TrueLoop.mat
VIO-DIRD/SeqSLAM_KITTI-00/: PRcurve.m  TrueLoop.mat
VIO-DIRD/SeqSLAM_KITTI-00/results/: preprocessing-groundtruth1-1-1-4540.mat  preprocessing-groundtruth2-1-1-4540.mat
VIO-DIRD/SeqSLAM_KITTI-00/seqSLAM/: data.mat  demo.m  doPreprocessing.m  openSeqSLAM.m
VIO-DIRD/results/: matches-groundtruth1-1-1-4540-groundtruth2-1-1-4540.mat
VIO-DIRD/seqSLAM/: doDifferenceMatrix.m
libDird/: CMakeLists.txt  README.txt
libDird/matlab/: compute_features.m  compute_loops.m  dirdMex.cpp  downSizeMatrix.m  getFileNames.m  make.m  placeRecognizerMex.cpp  runDemo.m  toSparse.m
libDird/scripts/: rename_images.sh  run_on_all_kitti_sequences.sh
libDird/src/: cDird.cpp  cDird.h  cImage.cpp  cImage.h  cPlaceRecognizer.cpp  cPlaceRecognizer.h  color1.map  color2.map  compute_features.cpp  compute_loops.cpp  create_debug_output.cpp
